.provarCaches/00D6C0000000xA6UAI/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Course_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Catalog</label>
        <referenceTo>Course_Catalog__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Hours_per_day__c</fullName>
        <label>Max. Hours per day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Schedule</label>
        <referenceTo>sked__Recurring_Schedule__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>